# snapshot-versions

./: .travis.yml  README.md  snapshot-versions.cabal  stack.yaml
app/: Main.hs
src/SnapshotVersions/: Cabal.hs  Cache.hs  CmdLine.hs  Output.hs  PackageIndex.hs  ProcessedPackages.hs  Snapshot.hs
