name:                snapshot-versions
version:             0.1.0.0
synopsis:            Gets the versions of build dependencies from a given stackage snapshot
description:         Please see README.md
homepage:            http://github.com/vigoo/snapshot-versions
license:             BSD3
license-file:        LICENSE
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
category:            Build
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SnapshotVersions.CmdLine
                     , SnapshotVersions.Snapshot
                     , SnapshotVersions.Cabal
                     , SnapshotVersions.PackageIndex
                     , SnapshotVersions.ProcessedPackages
                     , SnapshotVersions.Output
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , bytestring
                     , transformers
                     , mtl
                     , Cabal
                     , optparse-applicative
                     , http-conduit
                     , pretty
                     , MissingH
                     , tar
                     , pretty-show

  ghc-options:         -ddump-deriv
  default-language:    Haskell2010

executable snapshot-versions
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snapshot-versions
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite snapshot-versions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snapshot-versions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vigoo/snapshot-versions
