name:                snapshot-versions
version:             0.1.0.0
synopsis:            Gets the versions of build dependencies from a given stackage snapshot
description:         Please see README.md
homepage:            http://github.com/vigoo/snapshot-versions
license:             BSD3
license-file:        LICENSE
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
category:            Build
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SnapshotVersions.Cache
                     , SnapshotVersions.CmdLine
                     , SnapshotVersions.Snapshot
                     , SnapshotVersions.Cabal
                     , SnapshotVersions.PackageIndex
                     , SnapshotVersions.ProcessedPackages
                     , SnapshotVersions.Output
  other-modules:       Paths_snapshot_versions
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , bytestring
                     , cereal
                     , containers
                     , directory
                     , filepath
                     , http-conduit
                     , mtl
                     , optparse-applicative
                     , pretty
                     , pretty-show
                     , tar
                     , transformers

  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable snapshot-versions
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , snapshot-versions
                     , bytestring
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite snapshot-versions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snapshot-versions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vigoo/snapshot-versions
